@@ -5,6 +5,9 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -17,6 +20,7 @@ import com.pettact.api.board.entity.Board;
 import com.pettact.api.board.repository.BoardRepository;
 import com.pettact.api.code.entity.CommonCode;
 import com.pettact.api.code.service.CommonCodeService;
+import com.pettact.api.common.dto.PageResponseDto;
 import com.pettact.api.notification.dto.NotificationReqDTO;
 import com.pettact.api.notification.enums.NotificationType;
 import com.pettact.api.notification.enums.TargetType;
@@ -38,21 +42,28 @@ public class AdminService {
 	private final ReportRepository reportRepository;
 	
 	// 회원 목록 조회
-    public List<AdminUserListDTO> getUserList(String keyword, String status, String role,
-            							LocalDateTime startDate, LocalDateTime endDate) {
+	public PageResponseDto<AdminUserListDTO> getUserList(
+	        String keyword, String status, String role,
+	        LocalDateTime startDate, LocalDateTime endDate,
+	        int page, int size) {
 
-    	List<Users> users = userRepository.findUsersWithFilters(
-		(keyword == null || keyword.isBlank()) ? null : keyword,
-		(status == null || status.isBlank()) ? null : status,
-		(role == null || role.isBlank()) ? null : role,
-		startDate,
-		endDate
-		);
-		
-		return users.stream()
-					.map(AdminUserListDTO::from)
-					.collect(Collectors.toList());
+	    Pageable pageable = PageRequest.of(page - 1, size); // 0-based
+
+	    Page<Users> result = userRepository.findUsersWithFilters(
+	        (keyword == null || keyword.isBlank()) ? null : keyword,
+	        (status == null || status.isBlank()) ? null : status,
+	        (role == null || role.isBlank()) ? null : role,
+	        startDate, endDate, pageable
+	    );
+
+	    List<AdminUserListDTO> dtoList = result.getContent()
+	                                           .stream()
+	                                           .map(AdminUserListDTO::from)
+	                                           .toList();
+
+	    return new PageResponseDto<>(dtoList, (int) result.getTotalElements(), page, size);
 	}
+
 
     // 회원 정보 상세보기
 	public AdminUserDetailDTO getUserDetail(Long userNo) {
@@ -97,35 +108,37 @@ public class AdminService {
 	}
 	
 	// 판매자 목록 조회
-	public List<AdminUserListDTO> getSellerList(String keyword, String status,
-            LocalDateTime startDateTime, LocalDateTime endDateTime) {
+	public PageResponseDto<AdminUserListDTO> getSellerList(
+		    String keyword, String status,
+		    LocalDateTime startDateTime, LocalDateTime endDateTime,
+		    int page, int size
+	) {
+	    Pageable pageable = PageRequest.of(page - 1, size);
+	    Page<Users> sellers = userRepository.findSellersWithFilters(
+	        keyword, status, startDateTime, endDateTime, pageable
+	    );
 
-		List<Users> sellers = userRepository.findSellersWithFilters(
-			(keyword == null || keyword.isBlank()) ? null : keyword,
-			(status == null || status.isBlank()) ? null : status,
-			startDateTime,
-			endDateTime
-			);
-		
-		return sellers.stream()
-		.map(AdminUserListDTO::from)
-		.toList();
+	    List<AdminUserListDTO> dtoList = sellers.getContent().stream()
+	        .map(AdminUserListDTO::from)
+	        .toList();
+
+	    return new PageResponseDto<>(dtoList, (int) sellers.getTotalElements(), page, size);
 	}
 
 
+
 	// 판매자 권한 요청 대기중 목록
-	public List<AdminUserListDTO> getSellerRequests() {
-	    List<Users> requests = userRepository.findUsersWithFilters(
-	        null, // keyword
-	        "STATUS_PENDING", // status = 승인대기
-	        "ROLE_USER", // role = 일반 사용자
-	        null, // startDateTime
-	        null  // endDateTime
+	public PageResponseDto<AdminUserListDTO> getSellerRequests(int page, int size) {
+	    Pageable pageable = PageRequest.of(page - 1, size);
+	    Page<Users> requests = userRepository.findUsersWithFilters(
+	        null, "STATUS_PENDING", "ROLE_USER", null, null, pageable
 	    );
 
-	    return requests.stream()
-	                   .map(AdminUserListDTO::from)
-	                   .collect(Collectors.toList());
+	    List<AdminUserListDTO> dtoList = requests.getContent().stream()
+	        .map(AdminUserListDTO::from)
+	        .toList();
+
+	    return new PageResponseDto<>(dtoList, (int) requests.getTotalElements(), page, size);
 	}
 	
 	// 판매자 권한 승인
@@ -160,23 +173,22 @@ public class AdminService {
 	}
 
 	// 게시물 목록 조회
-	public List<AdminBoardListDTO> getBoardList(String keyword, Long categoryNo, Boolean isDeleted,
-	        LocalDateTime startDateTime, LocalDateTime endDateTime) {
-
-	    List<Board> boardList = boardRepository.findBoardsWithFilters(
-	        (keyword == null || keyword.isBlank()) ? null : keyword,
-	        (categoryNo == null) ? null : categoryNo,
-	        (isDeleted == null) ? null : isDeleted,
-	        startDateTime,
-	        endDateTime
+	public PageResponseDto<AdminBoardListDTO> getBoardList(
+		    String keyword, Long categoryNo, Boolean isDeleted,
+		    LocalDateTime startDateTime, LocalDateTime endDateTime,
+		    int page, int size
+	) {
+	    Pageable pageable = PageRequest.of(page - 1, size);
+	    Page<Board> boardList = boardRepository.findBoardsWithFilters(
+	        keyword, categoryNo, isDeleted, startDateTime, endDateTime, pageable
 	    );
 
-	    return boardList.stream()
-	            .map(AdminBoardListDTO::from)
-	            .collect(Collectors.toList());
+	    List<AdminBoardListDTO> dtoList = boardList.getContent().stream()
+	        .map(AdminBoardListDTO::from)
+	        .toList();
+
+	    return new PageResponseDto<>(dtoList, (int) boardList.getTotalElements(), page, size);
 	}
-
-
 
 	public AdminBoardDetailDTO getBoardDetail(Long boardNo) {
 	    Board board = boardRepository.findByBoardNo(boardNo);
@@ -187,15 +199,6 @@ public class AdminService {
 
 	    return AdminBoardDetailDTO.from(board);
 	}
-	
-	// 신고 목록 - 관리자쪽
-	public List<AdminReportListDTO> getAdminListReport(Report.ReportTargetLocation location, Integer status, String reason, LocalDate startDate, LocalDate endDate) {
 
-	    List<Report> reports = reportRepository.findAllWithFilters(location, status, reason, startDate, endDate);
-
-	    return reports.stream()
-	            .map(AdminReportListDTO::from)
-	            .collect(Collectors.toList());
-	}
 	
 }
